validation messages done

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -318,3 +318,5 @@
 "call","اتصل"
 "okay","حسنا"
 "cancel" = "إلغاء"
+"Confirm" = "أكد"
+"Are you sure you would like to remove this item from the shopping cart?" = "هل أنت متأكد أنك ترغب في إزالة هذا العنصر من عربة التسوق؟"
