--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -317,6 +317,6 @@
 "Send Email","أرسل بريدا إلكترونياً"
 "call","اتصل"
 "okay","حسنا"
-"cancel" = "إلغاء"
-"Confirm" = "أكد"
-"Are you sure you would like to remove this item from the shopping cart?" = "هل أنت متأكد أنك ترغب في إزالة هذا العنصر من عربة التسوق؟"
+"cancel","إلغاء"
+"Confirm","أكد"
+"Are you sure you would like to remove this item from the shopping cart?","هل أنت متأكد أنك ترغب في إزالة هذا العنصر من عربة التسوق؟"
