whishlist translation done.

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -323,3 +323,4 @@
 "Are you sure you would like to remove this item from the shopping cart?","هل أنت متأكد أنك ترغب في إزالة هذا العنصر من عربة التسوق؟"
 "The address has been saved.","تم حفظ العنوان."
 "The account information has been saved.","تم حفظ معلومات الحساب."
+"%1$s has been added to your wishlist. Click <a href="%2$s">here</a> to continue shopping.","قد أضيفت إلى سلة المفضلة. %1$s"
