--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -324,3 +324,11 @@
 "The address has been saved.","تم حفظ العنوان."
 "The account information has been saved.","تم حفظ معلومات الحساب."
 "%1$s has been added to your wishlist.","%1$s قد أضيفت إلى سلة المفضلة."
+"An error occurred while adding item to wishlist: %s","حدث خطأ أثناء إضافة عنصر إلى سلة:%s"
+"An error occurred while adding item to wishlist.","حدث خطأ أثناء إضافة عنصر إلى سلة."
+"Cannot load wishlist item","لا يمكن تحميل البند مفضلة"
+"Cannot configure product","لا يمكن تكوين المنتج"
+"Cannot specify product.","لا يمكن تحديد المنتج."
+"%1$s has been updated in your wishlist.","%1$s تم تحديث لسلة المفضلة."
+"An error occurred while updating wishlist.","حدث خطأ أثناء تحديث مفضلة."
+"Please specify the product's option(s).","يرجى تحديد المنتج الخيار الصورة."
