--- a/lib/Zend/Locale/Data/ar_SA.xml
+++ b/lib/Zend/Locale/Data/ar_SA.xml
@@ -27,6 +27,13 @@ For terms of use, see http://www.unicode.org/copyright.html
 	</dates>
 	<numbers>
 		<currencyFormats numberSystem="latn">
+			<decimalFormats>
+				<decimalFormatLength>
+					<decimalFormat>
+						<pattern>#0.###;#0.###-</pattern>
+					</decimalFormat>
+				</decimalFormatLength>
+			</decimalFormats>
 			<currencyFormatLength>
 				<currencyFormat type="standard">
 					<pattern>¤#0.00</pattern>
