track your shipment mobile ar fix

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -315,6 +315,7 @@
 "Track Your Order","تتبع طلبك"
 "Order Number","رقم الطلب"
 "Track your shipments","تتبع شحنتك"
+"Please enter tracking number","الرجاء إدخال رقم تتبع"
 "Tracking number","رقم التتبع"
 "Your Message","رسالتك"
 "See subject of Order Confirmation ? Type none if you don?t have an Order","انظر إلى عنوان تأكيد الطلب، اكتب لا يوجد إذا لم يكن لديك طلب"
