--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -228,3 +228,4 @@
 "send","أرسل"
 "Send Email","أرسل بريدا إلكترونياً"
 "call","اتصل"
+"There is already an account with this email address.","وهناك بالفعل حساب مع عنوان البريد الإلكتروني هذا."
