--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -201,6 +201,20 @@
 "ELEMENTS USED","العناصر المستخدمة"
 "CUSTOMIZE IT","تخصيصه"
 "Total Price","السعر الكلي"
+"Choose Font","اختر الخط"
+"Choose Text from library","اختيار نص من مكتبة"
+"Convert Text/Curved","تحويل نص / منحني"
+"Reverse :","عكس:"
+"Radius :","نصف القطر :"
+"Spacing :","تباعد:"
+"Bold","جريء"
+"Italic","حرف مائل"
+"Underline","مسطر"
+"Line Through","خط من خلال"
+"Overline","فوق خط"
+"Text Align Left","محاذاة النص إلى اليسار"
+"Text Align Center","مركز محاذاة النص"
+"Text Align Right","النص محاذاة لليمين"
 "Add Graphic","إضافة الجرافيكي"
 "Add Text","إضافة نص"
 "Select Color","اختيار اللون"
