--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -392,3 +392,17 @@
 "Character 3 (Optional)", "(اختياري) الحرف الثالث"
 "Character 4 (Optional)", "(اختياري) الحرف الرابع"
 "There is already an account with this email address.","وهناك بالفعل حساب مع عنوان البريد الإلكتروني هذا."
+"Choose Font","اختر الخط"
+"Choose Text from library","اختيار نص من مكتبة"
+"Convert Text/Curved","تحويل نص / منحني"
+"Reverse :","عكس:"
+"Radius :","نصف القطر :"
+"Spacing :","تباعد:"
+"Bold","جريء"
+"Italic","حرف مائل"
+"Underline","مسطر"
+"Line Through","خط من خلال"
+"Overline","فوق خط"
+"Text Align Left","محاذاة النص إلى اليسار"
+"Text Align Center","مركز محاذاة النص"
+"Text Align Right","النص محاذاة لليمين"
