--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -406,3 +406,5 @@
 "Text Align Left","محاذاة النص إلى اليسار"
 "Text Align Center","مركز محاذاة النص"
 "Text Align Right","النص محاذاة لليمين"
+"Street Address %s","العنوان %s"
+"Street Address","العنوان"
