--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -201,20 +201,6 @@
 "ELEMENTS USED","العناصر المستخدمة"
 "CUSTOMIZE IT","تخصيصه"
 "Total Price","السعر الكلي"
-"Choose Font","اختر الخط"
-"Choose Text from library","اختيار نص من مكتبة"
-"Convert Text/Curved","تحويل نص / منحني"
-"Reverse :","عكس:"
-"Radius :","نصف القطر :"
-"Spacing :","تباعد:"
-"Bold","جريء"
-"Italic","حرف مائل"
-"Underline","مسطر"
-"Line Through","خط من خلال"
-"Overline","فوق خط"
-"Text Align Left","محاذاة النص إلى اليسار"
-"Text Align Center","مركز محاذاة النص"
-"Text Align Right","النص محاذاة لليمين"
 "Add Graphic","إضافة الجرافيكي"
 "Add Text","إضافة نص"
 "Select Color","اختيار اللون"
@@ -406,3 +392,19 @@
 "Character 3 (Optional)", "(اختياري) الحرف الثالث"
 "Character 4 (Optional)", "(اختياري) الحرف الرابع"
 "There is already an account with this email address.","وهناك بالفعل حساب مع عنوان البريد الإلكتروني هذا."
+"Choose Font","اختر الخط"
+"Choose Text from library","اختيار نص من مكتبة"
+"Convert Text/Curved","تحويل نص / منحني"
+"Reverse :","عكس:"
+"Radius :","نصف القطر :"
+"Spacing :","تباعد:"
+"Bold","جريء"
+"Italic","حرف مائل"
+"Underline","مسطر"
+"Line Through","خط من خلال"
+"Overline","فوق خط"
+"Text Align Left","محاذاة النص إلى اليسار"
+"Text Align Center","مركز محاذاة النص"
+"Text Align Right","النص محاذاة لليمين"
+"Street Address %s","العنوان %s"
+"Street Address","العنوان"
