--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -408,3 +408,20 @@
 "Text Align Right","النص محاذاة لليمين"
 "Street Address %s","العنوان %s"
 "Street Address","العنوان"
+"Please check shipping address information. %s","يرجى التحقق من معلومات عنوان الشحن. %s"
+"Please specify a shipping method.","يرجى تحديد طريقة الشحن."
+"Please check billing address information. %s","يرجى التحقق من معلومات عنوان الفواتير. %s"
+"Please select a valid payment method.","يرجى تحديد طريقة دفع صالحة."
+"This email adress is already registered. Please enter another email to register account or login using this email.","وسجلت بالفعل عنوان البريد الإلكتروني هذا. الرجاء إدخال بريد إلكتروني آخر لتسجيل حساب أو تسجيل الدخول باستخدام هذا البريد الإلكتروني."
+"Invalid data.","بيانات غير صالحة."
+"Invalid shipping method.","طريقة الشحن غير صالح."
+"Customer Address is not valid.","عنوان العميل غير صالح."
+"Invalid checkout type.","نوع الخروج صالح."
+"Sorry, guest checkout is not allowed, please contact support.","عذرا، لا يسمح الخروج للضيوف، الرجاء الاتصال بالدعم."
+"Please check shipping address.","يرجى التحقق من عنوان الشحن."
+"Please check billing address.","يرجى التحقق من عنوان الفواتير."
+"Please select valid payment method.","يرجى تحديد طريقة دفع صالح."
+"Please enter the first name.","الرجاء إدخال الاسم الأول."
+"Please enter the last name.","يرجى إدخال اسم العائلة."
+"Please enter the company.","يرجى إدخال الشركة."
+"Please enter the state/province.","الرجاء إدخال الدولة / المقاطعة."
