--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -297,6 +297,7 @@
 "You will be charged an extra fee of %s (Incl. Taxes %s)","وسوف يتم رسم اضافي من %s (متضمنة الضرائب %s)"
 "You will be charged an extra fee of %s Incl. Taxes","وسوف يتم رسم اضافي من %s مدفوع. الضرائب"
 "You will be charged an extra fee of %s","وسوف يتم رسم اضافي من %s"
+"CASH ON DELIVERY, Please make the payment at the address provided in the email sent to you","الدفع عند الإستلام، نرجو القيام  بالدفع في العنوان المذكور بالبريد الإلكتروني المرسل إليك."
 "Promo Code","رمز الترويج"
 "APPLY PROMO CODE","اطلب رمزا ترويجياً"
 "Place Order","تقديم الطلبات"
@@ -425,3 +426,4 @@
 "Please enter the last name.","يرجى إدخال اسم العائلة."
 "Please enter the company.","يرجى إدخال الشركة."
 "Please enter the state/province.","الرجاء إدخال الدولة / المقاطعة."
+"CASH ON DELIVERY, Please make the payment at the address provided in the email sent to you","الدفع عند الإستلام، نرجو القيام  بالدفع في العنوان المذكور بالبريد الإلكتروني المرسل إليك."
